# Holmes

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
infra/: deploy_lambda.md  iam-policy.json
lessons/: code_walkthrough.md  interview.md
scripts/: check_env.py
src/: config.py
src/api/: handler.py  main.py  schemas.py
src/data/: prepare_images.py  prepare_text.py
src/eval/: eval_fusion.py  eval_image.py  eval_text.py  results_table.py
src/models/: baseline_text.py  fusion.py  image_detector.py  metadata_provenance.py  synthid_client.py  text_classifier.py
tests/: conftest.py  test_api.py  test_calibration.py  test_data.py  test_fusion.py  test_metadata.py
ui/: index.html
